Updating poms to allow more memory.