@@ -83,7 +83,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.18</version>
-				<configuration>
+        <configuration>
+          <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
 					<systemProperties>
 						<property>
 							<name>mode</name>
